# pokemon-showdown-rs

./: .CLAUDE.md  .gitignore  1-500-seeds-results.txt  100-seeds-results-new.txt  100-seeds-results.txt  1001-1500-seeds-results.txt  100k-seeds-results.txt  1501-2000-seeds-results.txt  2001-2500-seeds-results.txt  2501-3000-seeds-results.txt  300-seeds-results.txt  3001-3500-seeds-results.txt  3501-4000-seeds-results.txt  4001-4500-seeds-results.txt  4501-5000-seeds-results.txt  500-seeds-results.txt  500-seeds-results.txt.bak  5001-5500-seeds-results.txt  501-1000-seeds-results.txt  5501-6000-seeds-results.txt  6001-6500-seeds-results.txt  6501-7000-seeds-results.txt  7001-7500-seeds-results.txt  7501-8000-seeds-results.txt  8001-8500-seeds-results.txt  8501-9000-seeds-results.txt  9001-9500-seeds-results.txt  9501-10000-seeds-results.txt  ABILITIES_TODO.md  ABILITY_TODO.md  AGENT3_REPORT.md  AGENT4_IMPLEMENTATION_REPORT.md  BATTLE.md  BATTLE_ACTIONS_DIVERGENCES.md  BATTLE_COMPARISON.md  BATTLE_COMPARISON_ANALYSIS.md  BATTLE_DIVERGENCES.md  BATTLE_LOG.md  BATTLE_METHODS_TODO.md  BATTLE_PROCESS.md  (+507 more)
.claude/: settings.local.json
data/: abilities.json  aliases.json  compoundwordnames.json  conditions.json  formats-data.json  formats.json  gen8-past.json  items.json  moves.json  rulesets.json  species.json  typechart.json
examples/: benchmark_battle_rust.rs  check_filtered_species.rs  check_grubbin.rs  check_items.rs  check_items_unsorted.rs  check_species_count.rs  check_turn3.rs  compare_battle.rs  compare_hp.rs  compare_hp_extended.rs  compare_seed1.rs  compare_seed10.rs  compare_seed11.rs  compare_seed12.rs  compare_seed13.rs  compare_seed14.rs  compare_seed15.rs  compare_seed16.rs  compare_seed17.rs  compare_seed18.rs  compare_seed19.rs  compare_seed2.rs  compare_seed20.rs  compare_seed21.rs  compare_seed22.rs  compare_seed23.rs  compare_seed24.rs  compare_seed25.rs  compare_seed26.rs  compare_seed27.rs  compare_seed28.rs  compare_seed29.rs  compare_seed3.rs  compare_seed30.rs  compare_seed31.rs  compare_seed32.rs  compare_seed33.rs  compare_seed34.rs  compare_seed35.rs  compare_seed36.rs  (+1088 more)
scripts/: add-all-js-comments.js  add-js-comments-ts.js  add-js-comments.js  add-ts-comments-improved.js  analyze-ability-callbacks.js  (+26 more)
src/: battle.rs  (+35 more)
(+4217 files in other folders)
