[package]
name = "pokemon-showdown"
version = "0.1.0"
edition = "2021"
description = "A Rust port of the Pokemon Showdown battle simulator"
license = "MIT"

[features]
default = []
# Enable verbose debug logging (significantly impacts performance)
debug-logging = []

[dependencies]
# ChaCha20 for sodium-compatible PRNG
chacha20 = "0.9"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Random number generation for seed generation
rand = "0.8"
# Lazy static initialization
once_cell = "1.19"
# Unicode normalization for ID conversion
unicode-normalization = "0.1"
# Regular expressions for message parsing
regex = "1.10"
# Ordered hashmap (preserves insertion order like JavaScript objects)
indexmap = { version = "2.0", features = ["serde"] }
# Parallel iteration
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
